Uppdelning av main-filen

--- a/sangbok.tex
+++ b/sangbok.tex
@@ -105,182 +105,31 @@
 % Högtidliga visor
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Högtidliga sånger}
-\newpage
-
-\input{./Songs/nationalsangen.tex}
-
-\input{./Songs/open_ar_vart_val.tex}
-
-\newpage
-
-\input{./Songs/internationalen.tex}
-
-\input{./Songs/studentsangen.tex}
-
-\input{./Songs/kungssangen.tex}
-
-\input{./Songs/o_gamla_klang.tex}
-
-\newpage
+\input{./hogtidliga_sanger.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Gasquevisor
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Gasquevisor}
-\newpage
-
-\input{./Songs/porthos_visa.tex}
-
-\input{./Songs/liljekonvaljen.tex}
-
-\input{./Songs/kalmarevisan.tex}
-
-\input{./Songs/jag_har_aldrig.tex}
-
-\newpage
-
-\input{./Songs/jasen.tex}
-
-\input{./Songs/ode_till_olet.tex}
-
-\newpage
-
-\input{./Songs/jag_skall_festa.tex}
-
-\newpage
-
-\input{./Songs/strejk_pa_pripps.tex}
-
-\input{./Songs/hej_pa_er_broder_alla.tex}
-
-\input{./Songs/harjarevisan.tex}
-
-\input{./Songs/gasqueljasen.tex}
-
-\input{./Songs/en_liten_bla_forgatmigej.tex}
-
-\newpage
+\input{./gasquevisor.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Vinvisor
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Vinvisor}
-
-\newpage
-
-\input{./Songs/bordeaux.tex}
-
-\input{./Songs/feta_fransyskor.tex}
-
-\input{./Songs/sa_lange_rosten_ar_mild.tex}
-
-\newpage
-
-\input{./Songs/gammalt_brannvin.tex}
-
-\input{./Songs/mera_brannvin.tex}
-
-\newpage
+\input{./vinvisor.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Nubbevisor
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Nubbevisor}
-\newpage
-
-\input{./Songs/mera_skane.tex}
-
-\input{./Songs/helan.tex}
-
-\input{./Songs/helan_gick.tex}
-
-\input{./Songs/vikingen.tex}
-
-\input{./Songs/masen.tex}
-
-\input{./Songs/den_vingklippta_masen.tex}
-
-\input{./Songs/nar_jag_ar_fuller.tex}
-
-\newpage
-
-\input{./Songs/livet_ar_harligt.tex}
-
-\input{./Songs/mitt_lilla_lan.tex}
-
-\newpage
-
-\input{./Songs/uti_min_mage.tex}
-
-\input{./Songs/vodka_vodka.tex}
-
-\input{./Songs/spritbolaget.tex}
-
-\input{./Songs/imbelupet.tex}
-
-\input{./Songs/hyfsvisa.tex}
-
-\input{./Songs/an_en_gang_daran.tex}
-
-\newpage
-
-\input{./Songs/op_river.tex}
-
-\input{./Songs/ubaten.tex}
-
-\input{./Songs/spritnoblessens_dryckesmarsch.tex}
-
-\input{./Songs/tank_om_jag_hade.tex}
-
-\newpage
-
-\input{./Songs/grav_ur_tundran.tex}
-
-\input{./Songs/langt_ner_i_smaland.tex}
-
-\newpage
-
-\input{./Songs/undulaten.tex}
-
-\input{./Songs/wenngarn.tex}
-
-\newpage
+\input{./nubbevisor.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Punschvisor
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Punschvisor}
-
-\newpage
-
-\input{./Songs/punschen_kommer.tex}
-
-\input{./Songs/imperial_punsch.tex}
-
-\input{./Songs/djungelpunsch.tex}
-
-\input{./Songs/studiemedelsrondo.tex}
-
-\input{./Songs/vad_ger_dig_din_sisu.tex}
-
-\input{./Songs/simmigt_guld.tex}
-
-\input{./Songs/visa_vid_torsdagskvall.tex}
-
-\input{./Songs/punschfinalen.tex}
-
-\newpage
-
-\input{./Songs/punschen.tex}
-
-\input{./Songs/sista_punschvisan.tex}
-
-\newpage
+\input{./punschvisor.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Från andra sektioner
