--- a/sangbok.tex
+++ b/sangbok.tex
@@ -17,71 +17,7 @@
 %	DOCUMENT CONFIGURATIONS AND INFORMATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[8pt,twoside]{extreport} % Document font size and paper size
-
-\usepackage{verse} % Required for typesetting poems - this package drives this template
-
-\usepackage[T1]{fontenc} % International character encodings
-\usepackage{palatino} % Use the Palatino font by default
-\usepackage[utf8]{inputenc} % Enables åäö
-\usepackage{titlesec}
-\usepackage{graphicx} % Enables graphics
-\usepackage{float}
-\usepackage{listings} % för att kunna skriva kod i latex (se en liten blå förgätmigej)
-\usepackage{gensymb} % Ger lite extra tecken bla grader ringen
-
-\setlength{\parindent}{0pt} % Disable paragraph indentation
-
-% Author styles \centering
-\newcommand{\poemauthorcenter}[1]{\nopagebreak{\centering\footnotesize\textsc{#1}\par}} % Author as a footnote at the end of the poem center aligned
-\newcommand{\poemauthorright}[1]{\nopagebreak{\raggedleft\footnotesize\textsc{#1}\par}} % Author as a footnote at the end of the poem aligned right
-
-\renewcommand{\poemtitlefont}{\normalfont\bfseries\large\centering} % Define the poem title style
-
-\setlength{\stanzaskip}{0.5\baselineskip} % The distance between stanzas
-
-%----------------------------------------------------------------
-% Removes Chapter from chapter
-\titleformat{\chapter}{\normalfont\huge}{\thechapter.}{20pt}{\huge}
-%----------------------------------------------------------------
-% Changes paper size
-\usepackage[a6paper]{geometry}
-% OBS Bindingoffset ger en alternerande sidmarginal till bindningen
-\geometry{bmargin=2cm, tmargin=2cm, lmargin=1cm, rmargin=1cm, bindingoffset=1cm}
-%---------------------------------------------------------------
-% Package used to format header and footer
-\usepackage{fancyhdr}
-\pagestyle{fancy}
-% Removes "chapter" from header
-\renewcommand{\chaptermark}[1]{\markboth{\thechapter.\ #1}{}}
-% Changes distance between header and text
-\setlength{\headsep}{5pt}
-% Vertically offsets headers (and overall text)
-\setlength{\voffset}{-10pt}
-% Changes textheight
-\setlength{\textheight}{345pt}
-%---------------------------------------------------------------
-% Removes hyphenation (Ordbrytning)
-\usepackage[none]{hyphenat}
-%---------------------------------------------------------------
-% Graphics path
-\graphicspath{ {./Graphics/} }
-%---------------------------------------------------------------
-% Changes distance between text and floats
-\setlength{\intextsep}{3pt} % Vertical space above & below [h] floats
-\setlength{\textfloatsep}{3pt} % Vertical space below (above) [t] ([b]) floats
-\setlength{\abovecaptionskip}{3pt}
-\setlength{\belowcaptionskip}{3pt}
-%---------------------------------------------------------------
-% Prevents break after poemtitle
-\makeatletter
-\renewcommand{\@vstypeptitle}[1]{%
-  \vspace{\beforepoemtitleskip}
-  {\poemtitlefont #1\par}\nobreak
-  \vspace{\afterpoemtitleskip}
-}
-\makeatother
-%---------------------------------------------------------------
+\input{./config.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Document
@@ -135,47 +71,13 @@
 % Från andra sektioner
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Från andra sektioner}
-
-\newpage
-
-\input{./Songs/v_ingenjoren.tex}
-
-\input{./Songs/konglig_fysiks_paradhymn.tex}
-
-\newpage
+\input{./sektioner.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Övrigt av rang
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Övrigt av rang}
-
-\newpage
-
-%\input{./Texts/bara_ben.tex}
-
-\input{./Songs/nu_gronskar_det.tex}
-
-\newpage
-
-\input{./Songs/systeme_international.tex}
-
-\input{./Songs/jag_vill_aldrig_ga_pa_handels.tex}
-
-\input{./Songs/jag_vill_aldrig_ga_pa_fysik.tex}
-
-\input{./Songs/langtan_till_landet.tex}
-
-\input{./Songs/chalmersvisan.tex}
-
-\input{./Songs/ein_konig.tex}
-
-\input{./Songs/frans_michael_franzen_bordsvisa.tex}
-
-\input{./Songs/fredmans_sang.tex}
-
-\newpage
+\input{./rang.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Matnyttigheter
