--- a/Songs/nationalsangen.tex
+++ b/Songs/nationalsangen.tex
@@ -3,31 +3,30 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %###############################################################################
-% Elias Hachichou, F13, 190116
+% Elias Hachichou, F13, 180316
 %###############################################################################
 
 % Hej! Vad kul att du vill hjälpa till med sångboken!
 % Denna mall skall vägleda dig i hur du ska lägga in sånger i .tex!
 % Till din hjälp behöver du en texteditor. Oavsett operativsystem så
-% bör du ha en tillgänglig med jag rekommenderar Sublime text som går 
+% bör du ha en tillgänglig med jag rekommenderar Atom Texteditor som går 
 % att ladda ner gratis. 
 % Starta texteditorn och skapa en ny fil som du döper till sångnamnet
 % använd endast små bokstäver och a-z. Använd understreck istället för 
 % mellanslag.
-% Filen skall sparas i .tex format. Om du använder Sublime så kommer
+% Filen skall sparas i .tex format. Om du använder Atom så kommer
 % programmet att automatiskt att färgkoda koden.
 % Jag rekommenderar att kopiera innehållet i denna fil och att sedan
 % arbeta utifrån det.
 % När du är färdig så skall det se ut som i internationalen.tex
 % Alla kommentarer skall vara borta och avgränsare skall finnas.
-% Du får lägga in ditt namn, på samma sätt som ovan. (Om du går
-% Open så skall inget klassnamn skrivas med)
+% Du får lägga in ditt namn, på samma sätt som ovan.
 % Lycka till!
 
-% Här skall du sätta in en medellång rad från sången. Detta för att veta hur texten ska centreras under kompilering
+% Här skall du sätta in en genomsnittligt lång rad från sången. Detta för att veta hur texten ska centreras under kompileringen.
 \settowidth{\versewidth}{Din sol, Din himmel, Dina ängder gröna,}
 
-% Sångtitel
+% Sångtitel, här skriver du in sångtiteln
 \poemtitle{Nationalsången (Du gamla, du fria)}
 
 %------------------------------------------------
