--- a/gasquevisor.tex
+++ b/gasquevisor.tex
@@ -15,6 +15,12 @@
 
 \input{./Songs/jag_har_aldrig.tex}
 
+\input{./Songs/jag_vill_aldrig_ga_pa_handels.tex}
+
+\input{./Songs/jag_vill_aldrig_ga_pa_fysik.tex}
+
+\input{./Songs/datas_visa.tex}
+
 \input{./Songs/jag_skall_festa.tex}
 
 \input{./Songs/jasen.tex}
