--- a/rang.tex
+++ b/rang.tex
@@ -16,9 +16,7 @@
 
 \input{./Songs/fredmans_sang.tex}
 
-\input{./Songs/jag_vill_aldrig_ga_pa_handels.tex}
-
-\input{./Songs/jag_vill_aldrig_ga_pa_fysik.tex}
+\input{./Songs/hallen_luta.tex}
 
 \input{./Songs/langtan_till_landet.tex}
 
