--- a/Songs/fredmans_sang.tex
+++ b/Songs/fredmans_sang.tex
@@ -15,57 +15,110 @@
 \flagverse{1.}
 Så lunka vi så småningom\\*
 Från Bacchi buller och tumult,\\*
-När döden ropar, Granne kom,\\*
-Ditt timglas är nu fullt.\\*
-Du Gubbe fäll din krycka ner,\\*
+När döden ropar "Granne kom\\*
+ditt timglas är nu fullt".\\*
+Du Gubbe fäll din krycka ner\\*
 Och du, du Yngling, lyd min lag,\\*
-Den skönsta Nymph som åt dig ler\\*
-Inunder armen tag.\\!
+den skönsta Nymph som åt dig ler\\*
+inunder armen tag.\\!
 
 \flagverse{Refr.}
-Tycker du at grafven är för djup,\\*
-Nå välan så tag dig då en sup,\\*
-Tag dig sen dito en, dito två, dito tre,\\*
+Tycker du att grafven är för djup?\\*
+Nå välan så tag dig då en sup.\\*
+Tag dig sen dito en, dito två, dito tre.\\*
 Så dör du nöjdare.\\!
 
 \flagverse{2.}
 Du vid din remmare och präss,\\*
-Rödbrusig och med hatt på sned,\\*
-Snart skrider fram din likprocess\\*
-I några svarta led;\\*
-Och du som pratar där så stort,\\*
+rödbrusig och med hatt på sned,\\*
+snart skrider fram din likprocess\\*
+i några svarta led.\\*
+Och du som pratar där så stort\\*
 Med band och stjernor på din rock,\\*
-Ren snickarn kistan färdig gjort,\\*
-Och hyflar på des lock.\\!
+Ren snickarn kistan färdig gjort\\*
+och hyflar på des lock.\\!
 
 \flagverse{Refr.}
-Tycker du at grafven...\\!
+Tycker du att grafven...\\!
 
 \flagverse{3.}
+Men du som med en trumpen min\\*
+bland riglar, galler, järn och lås,\\*
+dig vilar på ditt penningskrin\\*
+inom din stängda bås.\\*
+Och du som svartsjuk slår i kras\\*
+buteljer, speglar och pokal,\\*
+bjud nu god natt, drick ur ditt glas\\*
+och hälsa din rival.\\!
+
+\flagverse{Refr.}
+Tycker du att grafven...\\!
+
+\flagverse{4.}
+Och du som under titlars klang\\*
+din tiggarstav förgyllt vart år\\*
+som knappast har, med all din rang,\\*
+en skilling till din bår.\\*
+och du som ilsken, feg och lat\\*
+fördömer vaggan som dig välvt\\*
+och ändå dagligt är plakat\\*
+till glasets sista hälft.\\!
+
+\flagverse{Refr.}
+Tycker du att grafven...\\!
+
+\flagverse{5.}
+Du som vid Martis fältbasun\\*
+i blodig skjorta sträckt ditt steg\\*
+och du som tumlar i paulun\\*
+i Chloris armar feg.\\*
+Och du som med din gyllne bok\\*
+vid templets genljud reser dig\\*
+som rister huvud lärd och klok\\*
+och för mot avgrund krig\\!
+
+\flagverse{Refr.}
+Tycker du att grafven...\\!
+
+\flagverse{6.}
+Men du som med en ärlig min\\*
+plär dina vänner häda jämt\\*
+och dem förtalar vid ditt vin\\*
+och det liksom på skämt.\\*
+Och du som ej försvarar dem\\* 
+fastän ur deras flaskor du,\\*
+du väl kan slicka dina fem,\\*
+vad svarar du väl nu?\\!
+
+\flagverse{Refr.}
+Tycker du att grafven...\\!
+
+
+\flagverse{7.}
 Men du som till din återfärd,\\*
-Ifrån det du till bordet gick,\\*
-Ej klingat för din raska värd,\\*
-Fastän han ropar: Drick!\\*
+ifrån det du till bordet gick,\\*
+ej klingat för din raska värd,\\*
+fastän han ropar: Drick!\\*
 Drif sådan gäst från mat och vin,\\*
-Kör honom med sitt anhang ut,\\*
-Och sen med en ovänlig min,\\*
-Ryck remmarn ur hans trut.\\!
+kör honom med sitt anhang ut,\\*
+och sen med en ovänlig min,\\*
+ryck remmarn ur hans trut!\\!
 
 \flagverse{Refr.}
-Tycker du at grafven...\\!
+Tycker du att grafven...\\!
 
-\flagverse{3.}
+\flagverse{8.}
 Säg är du nöjd? min granne säg,\\*
-Så prisa värden nu til slut;\\*
-Om vi ha en och samma väg,\\*
-Så följoms åt; drick ut.\\*
+så prisa värden nu til slut;\\*
+om vi ha en och samma väg,\\*
+så följoms åt; drick ut.\\*
 Men först med vinet rödt och hvitt\\*
-För vår Värdinna bugom oss,\\*
-Och halkom sen i grafven fritt,\\*
-Vid aftonstjernans bloss.\\!
+för vår värdinna bugom oss,\\*
+och halkom sen i grafven fritt,\\*
+vid aftonstjernans bloss.\\!
 
 \flagverse{Refr.}
-Tycker du at grafven...\\!
+Tycker du att grafven...\\!
 
 %------------------------------------------------
 
