Added 2 songs from maskin

--- a/Songs/konglig_fysiks_paradhymn.tex
+++ b/Songs/konglig_fysiks_paradhymn.tex
@@ -2,7 +2,7 @@
 % Konglig Fysiks Paradhymn
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \settowidth{\versewidth}{Frukta ej ty hjälpen är just här}
-\poemtitle{Konglig Fysiks Paradhymn}
+\poemtitle{Konglig Fysiks Paradhymn (Fysik)}
 
 %------------------------------------------------
 
