--- a/Songs/matbegor_(min_aptit).tex
+++ b/Songs/matbegor_(min_aptit).tex
@@ -4,7 +4,7 @@
 
 \settowidth{\versewidth}{Min aptit är helt abnorm}
 
-\poemtitle{Matbegär (Min aptit)}
+\poemtitle{Matbegär (Min aptit) (Kemi)}
 
 \begin{verse}[\versewidth]
 
