--- a/sektioner.tex
+++ b/sektioner.tex
@@ -12,4 +12,9 @@
 
 \input{./Songs/medtekingenjoren.tex}
 
+\input{./Songs/matbegor_(min_aptit).tex}
+
+\input{./Songs/hela_m.tex}
+
+\input{./Songs/theodor.tex}
 \newpage
