--- a/Songs/v_ingenjoren.tex
+++ b/Songs/v_ingenjoren.tex
@@ -4,7 +4,7 @@
 
 \settowidth{\versewidth}{Gudarnas gunstling, så stark}
 
-\poemtitle{V-Ingengören}
+\poemtitle{V-Ingengören (samhälles)}
 
 %------------------------------------------------
 
