--- a/Songs/hela_m.tex
+++ b/Songs/hela_m.tex
@@ -1,6 +1,6 @@
 %Hela M
 
-\settowidth{\versewidth}{Hela M}
+\settowidth{\versewidth}{Ur törstiga strupar hörs hesa skri}
 
 % Sångtitel, här skriver du in sångtiteln
 \poemtitle{Hela M (Maskin)}
@@ -17,30 +17,30 @@
 
 
 \flagverse{1.}
-Hela M!\*
-Kläm nu i\*
-Ur törstiga strupar hörs hesa skri\*
-Vi har fått\*
-lite, vått,\*
-men lika förbannat så törstar vi\*
-Låt en sup,\*
-lång och djup,\*
-från läges-få rörelseenergi!\*
-Nektars saft\*
-ger oss kraft\*
-allt ledsamt, det struntar vi i!\!
+Hela M!\\*
+Kläm nu i\\*
+Ur törstiga strupar hörs hesa skri\\*
+Vi har fått\\*
+lite, vått,\\*
+men lika förbannat så törstar vi\\*
+Låt en sup,\\*
+lång och djup,\\*
+från läges-få rörelseenergi!\\*
+Nektars saft\\*
+ger oss kraft\\*
+allt ledsamt, det struntar vi i!\\!
 %------------------------------------------------
 
 \flagverse{2.}
-Ty nubbar äro ljuva ting\*
-Osquar väl behöva.\*
-På en knagglig väg mot en ring\*
-kan de våra sorger söva, döva.\*
-Kvickt de kila magen kring\*
-med Newtonmeter många,\*
-skänka värme åt en frusen kropp\*
-och fara sen i huvet opp.\*
-HEJ!\!
+Ty nubbar äro ljuva ting\\*
+Osquar väl behöva.\\*
+På en knagglig väg mot en ring\\*
+kan de våra sorger söva, döva.\\*
+Kvickt de kila magen kring\\*
+med Newtonmeter många,\\*
+skänka värme åt en frusen kropp\\*
+och fara sen i huvet opp.\\*
+HEJ!\\!
 
 %------------------------------------------------
 
