--- a/Songs/matbegor_(min_aptit).tex
+++ b/Songs/matbegor_(min_aptit).tex
@@ -2,7 +2,7 @@
 % Matbegär, från kemisektionen
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\settowidth{\versewidth}{Min aptit är helt abnorm}
+\settowidth{\versewidth}{så jag måste äta mer <bas; måste äta...>}
 
 \poemtitle{Matbegär (Min aptit) (Kemi)}
 
