--- a/Songs/theodor.tex
+++ b/Songs/theodor.tex
@@ -11,17 +11,17 @@
 %------------------------------------------------
 
 \flagverse{1.}
-Jag elskede sjøen ifra jeg var ung\*
-og svømmede om som en sei\*
-faderorei\*
-En dag da jeg badet min velskapte kropp,\*
-kun bagenden ragede opp\*
-faderiorei.\*
-/: Folk ropte: " Der svømmer en alligator"\*
-Så var det **til Theodor.:/\!
+Jag elskede sjøen ifra jeg var ung\\*
+og svømmede om som en sei\\*
+faderorei\\*
+En dag da jeg badet min velskapte kropp,\\*
+kun bagenden ragede opp\\*
+faderiorei.\\*
+/: Folk ropte: " Der svømmer en alligator"\\*
+Så var det **til Theodor.:/\\!
 
 \flagverse{}
-**Bank i bordet\!
+**Bank i bordet\\!
 
 %------------------------------------------------
 
