New songs and added ovvereglerna till sangboken

--- a/punschvisor.tex
+++ b/punschvisor.tex
@@ -22,6 +22,8 @@
 
 \input{./Songs/studiemedelsrondo.tex}
 
+\input{./Songs/snapsvisa_fran_rattvik.tex}
+
 \input{./Songs/vad_ger_dig_din_sisu.tex}
 
 \input{./Songs/visa_vid_torsdagskvall.tex}
