--- a/sangbok.tex
+++ b/sangbok.tex
@@ -88,6 +88,8 @@
 
 \input{./Texts/matnyttigheter.tex}
 
+\input{.Texts/ovveregler.tex}
+
 \end{document}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
