--- a/Texts/ovveregler.tex
+++ b/Texts/ovveregler.tex
@@ -2,7 +2,9 @@
 % Ovveregler
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\settowidth{\versewidth}{Bakom brödbutiken bodde Baskerbosses båda bröder,}
+\settowidth{\versewidth}{Sektionsmärket bör sitt över hjärtat för att visa sin kärlek till OPEN}
+
+\poemtitle{Ovveregler}
 
 %------------------------------------------------
 
@@ -10,27 +12,20 @@
 
 %------------------------------------------------
 
-Sektionsmärket bör sitta över hjärtat för att visa sin Kärlek till OPEN\\*
-\\*
-Dryckesmärken bör sitta på vänster ben för att visa att OPENisten står stadigt\\*
-\\*
-Gasquemärken bör sitta på höger ben för att visa att OPENisten stadigt står\\*
-\\*
-Namn eller smeknamn bör finnas redovisat på en godtyckklig del av ovven,\\*
-höger ben rekomenderas\\*
-\\*
-Tvagning bör endast ske om OPENisten är i overallen.\\*
-Detta gäller även torktumling\\*
-\\*
-En sann OPENist hedrar den ärorika taditionen att bära sin vackert röda\\*
-overall den tredje onsdagen varje månad då detta är Ovve_Onsdag\\*
-\\*
-Ovveoskulden får endast tas med tänderna och när vederbörande\\*
-person har på sig ovven\\*
+Sektionsmärket bör sitta över hjärtat för att visa sin Kärlek till OPEN\\
+Dryckesmärken bör sitta på vänster ben för att visa att OPENisten står stadigt\\
+Gasquemärken bör sitta på höger ben för att visa att OPENisten stadigt står\\
+Namn eller smeknamn bör finnas redovisat på en godtyckklig del av ovven,\\
+höger ben rekomenderas\\
+Tvagning bör endast ske om OPENisten är i overallen.\\
+Detta gäller även torktumling\\
+En sann OPENist hedrar den ärorika taditionen att bära sin vackert röda\\
+overall den tredje onsdagen varje månad då detta är Ovve_Onsdag\\
+Ovveoskulden får endast tas med tänderna och när vederbörande\\
+person har på sig ovven\\
 
 %------------------------------------------------
 
-\poemauthorcenter{Elias Hachichou, OPEN/F13}
 
 %------------------------------------------------
 
