--- a/sangbok.tex
+++ b/sangbok.tex
@@ -68,6 +68,12 @@
 \input{./punschvisor.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Torra visor
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\input{./torra.tex}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Från andra sektioner
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -88,7 +94,6 @@
 
 \input{./Texts/matnyttigheter.tex}
 
-\input{.Texts/ovveregler.tex}
 
 \end{document}
 
