Uppdatering av gitignore

--- a/Songs/medtekingenjoren.tex
+++ b/Songs/medtekingenjoren.tex
@@ -9,7 +9,7 @@
 \settowidth{\versewidth}{Vi som botar alla sjuka}
 
 % Sångtitel, här skriver du in sångtiteln
-\poemtitle{Medtekingenjören (Medetek)}
+\poemtitle{Medtekingenjören (Medtek)}
 
 %------------------------------------------------
 
