--- a/config.tex
+++ b/config.tex
@@ -5,7 +5,7 @@
 \documentclass[8pt,twoside]{extreport} % Document font size and paper size
 
 \usepackage{verse} % Required for typesetting poems - this package drives this template
-
+\usepackage{enumitem}
 \usepackage[T1]{fontenc} % International character encodings
 \usepackage{palatino} % Use the Palatino font by default
 \usepackage[utf8]{inputenc} % Enables åäö
