--- a/sangbok.tex
+++ b/sangbok.tex
@@ -26,9 +26,11 @@
 
 \chapter{Förord}
 
+
 \input{./Texts/preface.tex}
 
 \newpage
+
 
 \chapter{Innehållsförteckning}
 \makeatletter
@@ -84,6 +86,16 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \input{./rang.tex}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%Ovveregler
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\chapter{Ovveregler}
+
+\input{./Texts/ovveregler.tex}
+
+\newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Matnyttigheter
