--- a/gasquevisor.tex
+++ b/gasquevisor.tex
@@ -3,6 +3,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Gasquevisor}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\textwidth]{laseriet_nojd.jpg}
+\end{figure}
 \newpage
 
 \input{./Songs/en_liten_bla_forgatmigej.tex}
