--- a/sangbok.tex
+++ b/sangbok.tex
@@ -102,7 +102,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Matnyttigheter}
-\newpage
+
+%------------------------------------------------
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\textwidth]{nollan_vaaa.png}
+\end{figure}
 
 \input{./Texts/matnyttigheter.tex}
 
