--- a/torra.tex
+++ b/torra.tex
@@ -3,6 +3,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Torra visor}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\textwidth]{nollan_macka.png}
+\end{figure}
+
 \newpage
 
 \input{./Songs/skal_for_vattnet.tex}
