--- a/gasquevisor.tex
+++ b/gasquevisor.tex
@@ -13,20 +13,26 @@
 \input{./Songs/en_liten_bla_forgatmigej.tex}
 
 \input{./Songs/gasqueljasen.tex}
+\newpage
 
 \input{./Songs/hej_pa_er_broder_alla.tex}
 
 \input{./Songs/harjarevisan.tex}
 
 \input{./Songs/jag_har_aldrig.tex}
+\newpage
 
 \input{./Songs/jag_vill_aldrig_ga_pa_handels.tex}
+\newpage
 
 \input{./Songs/jag_vill_aldrig_ga_pa_fysik.tex}
+\newpage
 
 \input{./Songs/datas_visa.tex}
+\newpage
 
 \input{./Songs/jag_skall_festa.tex}
+\newpage
 
 \input{./Songs/jasen.tex}
 
