--- a/nubbevisor.tex
+++ b/nubbevisor.tex
@@ -8,6 +8,7 @@
 \input{./Songs/grav_ur_tundran.tex}
 
 \input{./Songs/helan.tex}
+\newpage
 
 \input{./Songs/helan_gick.tex}
 
@@ -28,6 +29,7 @@
 \input{./Songs/op_river.tex}
 
 \input{./Songs/livet_ar_harligt.tex}
+\newpage
 
 \input{./Songs/langt_ner_i_smaland.tex}
 
