--- a/punschvisor.tex
+++ b/punschvisor.tex
@@ -4,6 +4,13 @@
 
 \chapter{Punschvisor}
 
+%------------------------------------------------
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9\textwidth]{punsh.jpg}
+\end{figure}
+
 \newpage
 
 \input{./Songs/djungelpunsch.tex}
@@ -13,10 +20,12 @@
 \input{./Songs/punschen.tex}
 
 \input{./Songs/punschen_kommer.tex}
+\newpage
 
 \input{./Songs/punschfinalen.tex}
 
 \input{./Songs/simmigt_guld.tex}
+\newpage
 
 \input{./Songs/sista_punschvisan.tex}
 
@@ -25,6 +34,7 @@
 \input{./Songs/snapsvisa_fran_rattvik.tex}
 
 \input{./Songs/vad_ger_dig_din_sisu.tex}
+\newpage
 
 \input{./Songs/visa_vid_torsdagskvall.tex}
 
