--- a/rang.tex
+++ b/rang.tex
@@ -15,12 +15,13 @@
 \input{./Songs/frans_michael_franzen_bordsvisa.tex}
 
 \input{./Songs/fredmans_sang.tex}
+\newpage
 
 \input{./Songs/hallen_luta.tex}
+\newpage
 
 \input{./Songs/langtan_till_landet.tex}
 
-\input{./Songs/nu_gronskar_det.tex}
 
 
 \newpage
