--- a/vinvisor.tex
+++ b/vinvisor.tex
@@ -4,6 +4,13 @@
 
 \chapter{Vinvisor}
 
+%------------------------------------------------
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\textwidth]{vin_laseri.jpg}
+\end{figure}
+
 \newpage
 
 \input{./Songs/bordeaux.tex}
@@ -11,6 +18,7 @@
 \input{./Songs/feta_fransyskor.tex}
 
 \input{./Songs/gammalt_brannvin.tex}
+\newpage
 
 \input{./Songs/mera_brannvin.tex}
 
